--- a/java_currecny_converter/.classpath
+++ b/java_currecny_converter/.classpath
@@ -6,6 +6,10 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/Terence/Downloads/json-20231013.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Terence/Downloads/json-20231013.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
